--- a/index.html
+++ b/index.html
@@ -16,8 +16,16 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
+				<section data-markdown="./slides-dir/main.md"
+				data-separator="^==="
+				data-separator-vertical="^=="
+				data-separator-notes="^Note:"
+				data-charset="UTF-8">
+		   <!--
+			   Note that Windows uses `\r\n` instead of `\n` as its linefeed character.
+			   For a regex that supports all operating systems, use `\r?\n` instead of `\n`.
+		   -->
+				</section>
 			</div>
 		</div>
 
@@ -25,6 +33,7 @@
 		<script src="plugin/notes/notes.js"></script>
 		<script src="plugin/markdown/markdown.js"></script>
 		<script src="plugin/highlight/highlight.js"></script>
+        <script src="plugin/math/math.js"></script>
 		<script>
 			// More info about initialization & config:
 			// - https://revealjs.com/initialization/
@@ -33,7 +42,7 @@
 				hash: true,
 
 				// Learn about plugins: https://revealjs.com/plugins/
-				plugins: [ RevealMarkdown, RevealHighlight, RevealNotes ]
+				plugins: [ RevealMarkdown, RevealHighlight, RevealNotes, RevealMath.KaTeX ]
 			});
 		</script>
 	</body>
