--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section data-markdown="./slides-dir/main.md"
+				<section data-markdown="docs/slides-dir/main.md"
 				data-separator="^==="
 				data-separator-vertical="^=="
 				data-separator-notes="^Note:"
