--- a/lectures/2024-12-09.html
+++ b/lectures/2024-12-09.html
@@ -6,12 +6,12 @@
 
 		<title>Brain-Inspired</title>
 
-		<link rel="stylesheet" href="../../dist/reset.css">
-		<link rel="stylesheet" href="../../dist/reveal.css">
-		<link rel="stylesheet" href="../../dist/theme/serif.css">
+		<link rel="stylesheet" href="../dist/reset.css">
+		<link rel="stylesheet" href="../dist/reveal.css">
+		<link rel="stylesheet" href="../dist/theme/serif.css">
 
 		<!-- Theme used for syntax highlighted code -->
-		<link rel="stylesheet" href="../../plugin/highlight/monokai.css">
+		<link rel="stylesheet" href="../plugin/highlight/monokai.css">
 	</head>
 	<body>
 		<div class="reveal">
@@ -35,13 +35,13 @@
 		<script src="http://neuralnetworksanddeeplearning.com/js/button.js"></script>
 		<script src="http://neuralnetworksanddeeplearning.com/js/scrubbable.js"></script>
 		<script src="http://neuralnetworksanddeeplearning.com/js/three.min.js"></script>
-		<script src="../../dist/reveal.js"></script>
-		<script src="../../plugin/zoom/zoom.js"></script>
-		<script src="../../plugin/search/search.js"></script>
-		<script src="../../plugin/notes/notes.js"></script>
-		<script src="../../plugin/markdown/markdown.js"></script>
-		<script src="../../plugin/highlight/highlight.js"></script>
-        <script src="../../plugin/math/math.js"></script>
+		<script src="../dist/reveal.js"></script>
+		<script src="../plugin/zoom/zoom.js"></script>
+		<script src="../plugin/search/search.js"></script>
+		<script src="../plugin/notes/notes.js"></script>
+		<script src="../plugin/markdown/markdown.js"></script>
+		<script src="../plugin/highlight/highlight.js"></script>
+        <script src="../plugin/math/math.js"></script>
 		<script>
 			// More info about initialization & config:
 			// - https://revealjs.com/initialization/
